Fix: host.docker.internal

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
     profiles:
       - test
       - production
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
   nginx:
     image: openresty/openresty:alpine
